Rewrite to drop CoolBreeze stuff and add group FSM, untested

--- a/project.properties
+++ b/project.properties
@@ -1,6 +1,2 @@
-name=CoolBreeze
-dependencies.OneWire=2.0.1
-dependencies.DS18B20=0.1.7
-dependencies.Adafruit_ST7735=0.0.1
-dependencies.EchoPhotonBridge=0.5.5
+name=RingControl
 dependencies.FastLED=3.1.5
